# FinalYear

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Copy_of_Thaat_and_Raga_Identification.ipynb  README.md  TASK_6_IMPLEMENTATION_SUMMARY.md  create_dataset_from_youtube.py  demo_evaluation_system.py  demo_training_pipeline.py  example_metadata.json  format_dataset_for_raaghmm.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
.kiro/specs/raag-hmm-detection/: design.md  requirements.md  tasks.md
assets/references/: Untitled Diagram - draw.io.html
assets/references/Untitled Diagram - draw.io_files/: api.js
dev_utils/: CLI_IMPLEMENTATION_SUMMARY.md  USAGE_GUIDE.md  create_metadata.py  demo_complete_pipeline.py  quick_mp3_demo.py  simple_demo.py  test_mp3_basic.py  train_with_my_data.py  train_with_single_mp3.py  validate_setup.py
docs/api/: api_reference.md
docs/usage/: usage_guide.md
evaluation_results/: classification_report.csv  classification_report.json
examples/: usage_examples.py
proper_dataset/test/metadata/: bihag_test_01.json  darbari_test_01.json  desh_test_01.json  gaud_malhar_test_01.json  yaman_test_01.json
proper_dataset/train/metadata/: bihag_train_01.json  bihag_train_02.json  bihag_train_03.json  darbari_train_01.json  darbari_train_02.json  darbari_train_03.json  desh_train_01.json  desh_train_02.json  desh_train_03.json  gaud_malhar_train_01.json  gaud_malhar_train_02.json  gaud_malhar_train_03.json  yaman_train_01.json  yaman_train_02.json  yaman_train_03.json
proper_dataset/val/metadata/: bihag_val_01.json  darbari_val_01.json  desh_val_01.json  gaud_malhar_val_01.json  yaman_val_01.json
raag_hmm/: exceptions.py
raag_hmm/cli/: dataset.py  errors.py  main.py  predict.py  train.py  utils.py
raag_hmm/evaluate/: metrics.py
raag_hmm/hmm/: model.py
raag_hmm/infer/: classifier.py
raag_hmm/io/: dataset.py  metadata.py
raag_hmm/pitch/: extractor.py
raag_hmm/quantize/: __init__.py
sample_dataset/test/metadata/: bihag_test1.json
sample_dataset/train/metadata/: bihag_sample1.json  darbari_sample1.json  desh_sample1.json  gaud_malhar_sample1.json  yaman_sample1.json
scripts/: dev.sh
src/raag_hmm/: __init__.py  config.py  logger.py
src/raag_hmm/cli/: __init__.py  dataset.py  evaluate.py
src/raag_hmm/evaluate/: __init__.py
src/raag_hmm/hmm/: __init__.py
src/raag_hmm/infer/: __init__.py
src/raag_hmm/io/: __init__.py  audio.py
src/raag_hmm/pitch/: __init__.py  smoother.py
src/raag_hmm/quantize/: chromatic.py  sequence.py  tonic.py
src/raag_hmm/train/: __init__.py  persistence.py  trainer.py
tests/: __init__.py  conftest.py  test_cli_dataset.py  test_cli_error_handling.py  test_cli_train_predict.py  test_config.py  test_evaluate_confusion_matrix.py  test_evaluate_integration.py  test_evaluate_metrics.py  test_forward_algorithm_integration.py  test_hmm_model.py  test_infer_classifier.py  test_io_audio.py  test_io_dataset.py  test_io_metadata.py  test_model_persistence.py  test_pitch_extractor.py  test_pitch_smoother.py  test_quantize_chromatic.py  test_quantize_tonic.py  test_train_integration.py
tests/integration/: test_pipeline.py
tests/unit/: test_hmm.py  test_pitch.py  test_quantize.py
